--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,28 @@
 html {
   font-size: 62.5%;
 }
+* {
+  box-sizing: border-box;
+}
 :root {
-  background-color: #242424;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  --white: rgba(255, 255, 255, 0.87);
+  --primary: #7434DB;
+  --gray200: #6B6B70;
+  --gray400: #292929;
+  --gray500: #211F27;
+  --gray600: #1D1D1D;
+  --gray700: #18181C;
 }
 body {
   margin: 0;
   font-size: 1.6rem;
-  color: rgba(255, 255, 255, 0.87);
+  color: var(--white);
+  font-family: 'Inter', sans-serif;
 }
 #root {
   display: grid;
@@ -24,5 +34,20 @@ body {
 #root main {
   padding-block: 3rem;
   padding-left: 5.5rem;
+  overflow-x: hidden;
   background-image: linear-gradient(to bottom, #050505, #18181C);
+}
+input {
+  outline-width: 0;
+}
+ul {
+  padding-left: 0;
+}
+img {
+  display: block;
+  width: 100%;
+}
+button {
+  border: none;
+  background-color: transparent;
 }
