--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ html {
   -webkit-text-size-adjust: 100%;
   --white: rgba(255, 255, 255, 0.87);
   --primary: #7434DB;
+  --gray100: #7D7F83;
   --gray200: #6B6B70;
   --gray400: #292929;
   --gray500: #211F27;
