add music control functionality

--- a/src/components/layout/Player/style.css
+++ b/src/components/layout/Player/style.css
@@ -19,20 +19,18 @@
 .player__controls {
   display: flex;
   align-items: center;
+  flex-direction: column;
+  width: 35%;
+  left: 50%;
+  bottom: 0;
   gap: 1rem;
-  padding-block: 1.2rem;
+  padding-block: 1.15rem;
   padding-inline: 3rem;
-  border-radius: 2rem 2rem 0 0;
 }
 .player__buttons {
   display: flex;
   align-items: center;
   gap: 1rem;
-}
-.player__controls {
-  flex-basis: 35%;
-  flex-direction: column;
-  gap: .75rem;
 }
 .player__play {
   display: flex;
@@ -44,14 +42,20 @@
 .bar {
   display: flex;
   width: 100%;
-  overflow-x: hidden;
   align-items: center;
   gap: 1rem;
 }
 .bar__time {
+  display: inline-block;
   font-size: 1.1rem;
   color: #cbcbcb;
+  width: 2rem;
+  margin-inline: .5rem;
 }
+.bar .css-2bvlrv-Slider {
+  flex: auto;
+}
+/*
 .bar__progress {
   width: 100%;
   background-color: var(--gray100);
@@ -70,4 +74,4 @@
   left: -100%;
   border-radius: inherit;
   transform: translateX(20%);
-}
+}*/
