--- a/src/components/layout/Search/style.css
+++ b/src/components/layout/Search/style.css
@@ -12,7 +12,7 @@
   padding-left: 4.5rem;
   background-color: var(--gray600);
   color: inherit;
-  width: 30%;
+  min-width: 35rem;
   border: 2px solid var(--gray400);
 }
 .search__input::placeholder {
