--- a/src/components/layout/Player/style.css
+++ b/src/components/layout/Player/style.css
@@ -3,17 +3,17 @@
     transform: translateY(0);
   }
 }
+
 .player {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  justify-content: center;
   background-color: var(--gray500);
   position: fixed;
   bottom: 0;
-  width: 100%;
-  padding-right: 3rem;
-  padding-left: 1rem;
+  left: 0;
+  right: 0;
   transform: translateY(100%);
   animation: onAppear .18s cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
 }
@@ -21,10 +21,22 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 65rem;
+  width: 80%;
   gap: 1.2rem;
   padding-block: 1.15rem;
   padding-inline: 3rem;
+}
+@media screen and (min-width: 52em) {
+  .player {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-right: 3rem;
+    padding-left: 1rem;
+  }
+  .player__controls {
+    width: 35%;
+  }
 }
 .player__buttons {
   display: flex;
@@ -54,8 +66,16 @@
 .bar .css-2bvlrv-Slider {
   flex: auto;
 }
-.player__volume {
-  display: inherit;
-  gap: 1rem;
-  align-items: inherit;
+.player__volume, .player .song__content {
+  display: none;
+}
+@media screen and (min-width: 52em) {
+  .player .song__content {
+    display: flex;
+  }
+  .player__volume {
+    display: inherit;
+    gap: 1rem;
+    align-items: inherit;
+  } 
 }
