--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  --separation: 5.5rem;
   --white: rgba(255, 255, 255, 0.87);
   --primary: #7434DB;
   --gray100: #7D7F83;
@@ -27,16 +28,13 @@ body {
 }
 #root {
   display: flex;
-  /*display: grid;*/
   height: 100vh;
   max-height: 100vh;
-  /*grid-template-columns: auto 1fr;*/
-}
-#root main {
-  padding-block: 3rem;
-  padding-left: 5.5rem;
-  overflow-x: hidden;
   background-image: linear-gradient(to bottom, #050505, #18181C);
+}
+header, main {
+  padding-top: 2.5rem;
+  padding-left: 5.5rem;
 }
 input {
   outline-width: 0;
