--- a/src/components/atoms/Song/style.css
+++ b/src/components/atoms/Song/style.css
@@ -12,8 +12,10 @@
   padding-right: 2rem;
   transition: background-color .12s ease-in-out;
 }
-.song-card:hover {
-  background-color: #00000021;
+@media screen and (min-width: 62em) {
+  .song-card:hover {
+    background-color: #00000021;
+  } 
 }
 .song__content {
   display: flex;
