--- a/src/components/layout/Header/style.css
+++ b/src/components/layout/Header/style.css
@@ -7,27 +7,36 @@
 }
 .header form {
   width: 100%;
-  max-width: 40rem;
+  max-width: 38rem;
 }
 .searcher {
   position: relative;
 }
 .searcher svg {
   position: absolute;
-  left: 1.2rem;
-  top: 1.2rem;
+  left: 1.1rem;
+  top: 1.1rem;
 }
 .search__input {
   border-radius: .5rem;
-  padding-block: 1.2rem;
-  padding-left: 4.5rem;
+  padding-block: 1rem;
+  padding-left: 4.2rem;
+  border: 2px solid var(--gray400);
   background-color: var(--gray600);
   color: inherit;
-  border: 2px solid var(--gray400);
+  font-family: inherit;
   width: 100%;
 }
 .search__input::placeholder {
-  color: var(--gray200);
+  color: rgb(206, 206, 206);
+}
+.search__input:focus {
+  border-color: var(--primary);
+}
+@media screen and (min-width: 52em) {
+  .search__input:hover {
+    border-color: var(--primary);
+  }
 }
 .header__open {
   color: var(--white);
