--- a/src/components/atoms/Skeleton/style.css
+++ b/src/components/atoms/Skeleton/style.css
@@ -21,11 +21,13 @@
 }
 .skeleton__title, .skeleton__text {
   width: 18rem;
-  height: 1.2rem;
+  height: 1.3rem;
   background-color: var(--gray700);
 }
 .skeleton__title {
   width: 15rem;
+  height: 2.2rem;
+  margin-bottom: .4rem;
 }
 .skeleton__text {
   width: 12rem;
@@ -33,6 +35,6 @@
 .skeleton__cover {
   background-color: var(--gray700);
   border-radius: 1rem;
-  margin-bottom: 1.4rem;
+  margin-bottom: 1.7rem;
   box-shadow: rgba(5, 5, 5, .6) 0px 3px 15px;
 }
