--- a/src/components/layout/Player/style.css
+++ b/src/components/layout/Player/style.css
@@ -1,38 +1,34 @@
-@keyframes onAppear {
-  to {
-    transform: translateY(0);
-  }
-}
 .player {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--gray500);
   position: fixed;
-  padding-bottom: .3rem;
   bottom: 0;
   left: 0;
   right: 0;
-  transform: translateY(100%);
-  animation: onAppear .18s cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
+  height: 10.2rem;
+}
+.player__container {
+  height: inherit;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 2rem;
+  background-color: var(--gray500);
 }
 .player__controls {
   display: flex;
-  align-items: center;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   flex-direction: column;
-  width: 80%;
+  align-items: center;
   gap: 1.2rem;
+  width: 75%;
   padding-block: 1.15rem;
   padding-inline: 3rem;
 }
 @media screen and (min-width: 52em) {
-  .player {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    padding-right: 3rem;
-    padding-left: 1rem;
+  .player--centered {
+    justify-content: center;
   }
   .player__controls {
     width: 35%;
@@ -41,7 +37,10 @@
 .player__buttons {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: .5rem;
+}
+.player__buttons--disabled button:nth-of-type(2) {
+  background-color: var(--gray100);
 }
 .player__play {
   display: flex;
@@ -72,9 +71,6 @@
 .volume__button {
   display: inherit;
 }
-.volume__button:hover svg {
-  fill: rgb(255, 255, 255);
-}
 @media screen and (min-width: 52em) {
   .player .song__content {
     display: flex;
@@ -85,4 +81,7 @@
     max-width: 18rem;
     gap: 1rem;
   } 
+  .volume__button:hover svg {
+    fill: var(--white);
+  }
 }
