add app skeletons

--- a/src/components/atoms/Skeleton/style.css
+++ b/src/components/atoms/Skeleton/style.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   padding-block: 1rem;
+  margin-block: .5rem;
   padding-left: 2rem;
 }
 .song__image--skeleton {
