add results page

--- a/src/components/layout/Aside/style.css
+++ b/src/components/layout/Aside/style.css
@@ -19,6 +19,7 @@
   align-items: center;
   gap: 1.8rem;
   padding-right: calc(var(--separation) * 2.3);
+  color: var(--white);
   position: relative;
 }
 .navbar__item::after {
