--- a/src/components/atoms/Card/Result/style.css
+++ b/src/components/atoms/Card/Result/style.css
@@ -1,5 +1,32 @@
 .result {
-  width: 15rem;
-  padding: .5rem;
-  background-color: var(--gray700);
+  position: relative;
+  border-radius: 1rem;
+  background-color: #18181cce;
+  box-shadow: rgba(5, 5, 5, .3) 0px 3px 15px;
+}
+.result::before {
+  content: '';
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #6023C0;
+}
+.result:hover {
+  filter: brightness(1.05)
+}
+.result__content {
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+  padding-inline: 1.2rem;
+}
+.result__content h2 {
+  font-weight: 500;
+  font-size: 1.5rem;
+  overflow-x: hidden;
+  margin-top: .5rem;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
