--- a/src/components/layout/Aside/style.css
+++ b/src/components/layout/Aside/style.css
@@ -1,32 +1,27 @@
 .aside {
   background-color: var(--gray700);
   padding-block: 1.6rem;
-  padding-left: 2rem;
 }
-.logo { 
+.logo {
+  padding-left: 2rem;
   font-size: 2.2rem;
 }
-.navbar {
+.navbar__list {
+  padding-top: 2rem;
   display: flex;
   flex-direction: column;
-  gap: 2.4rem;
-  padding-top: 2rem;
-  font-weight: 700;
-  font-size: 1.5rem;
+  gap: .5rem;
 }
 .navbar__item {
   display: flex;
   align-items: center;
   gap: 1.8rem;
+  font-size: 1.4rem;
+  padding-block: 1.2rem;
+  padding-left: 2rem;
   padding-right: calc(var(--separation) * 2.3);
   position: relative;
 }
-.navbar__item::after {
-  content: "";
-  position: absolute;
-  right: 0;
-  width: 3px;
-  height: 100%;
-  border-radius: 2px;
-  background-color: var(--primary);
+.navbar__item:hover {
+  background-color: #101011;
 }
