--- a/src/components/layout/style.css
+++ b/src/components/layout/style.css
@@ -13,8 +13,13 @@
   padding-left: var(--separation);
   overflow-x: hidden;
 }
+.app__main::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  display: none;
+}
 .player {
-  height: 9.5rem;
+  height: 10rem;
   grid-column: 1 / 3;
   grid-row: 2 / 4;
 }
