--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ html {
   --separation: 5rem;
   --white: rgba(255, 255, 255, 0.87);
   --primary: #7434db;
+  --gray50: #D3D4D5;
   --gray100: #7D7F83;
   --gray200: #6B6B70;
   --gray400: #292929;
