--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ html {
   --white: #ffffff;
   --primary: #8952E0;
   --gray50: #D8D9DD;
+  --gray80: #9696A7;
   --gray100: #7D7F83;
   --gray200: #585865;
   --gray700: #191920;
