add playlist context

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ html {
   --gray100: #7D7F83;
   --gray200: #585865;
   --gray400: #494A55;
+  --gray500: #393A42;
   --gray700: #191920;
   --gray900: #0D0E10;
 }
