--- a/src/components/layout/Aside/style.css
+++ b/src/components/layout/Aside/style.css
@@ -1,14 +1,22 @@
 .aside {
   background-color: var(--gray900);
-  padding: 1.6rem 1rem;
+  padding-block: 2rem;
+  padding-inline: 1.2rem;
 }
-.logo {
+.profile {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-inline: 1.2rem;
+}
+.profile__username {
   font-size: 2rem;
   font-weight: 700;
   color: var(--white);
 }
 .navbar__list {
-  padding-top: 2rem;
+  padding-top: 1rem;
+  width: calc(var(--separation) * 4.2);
   display: flex;
   flex-direction: column;
   gap: .5rem;
@@ -23,14 +31,20 @@
   padding-block: 1.2rem;
   font-weight: 700;
   padding-left: 1.2rem;
-  padding-right: calc(var(--separation) * 2.3);
   position: relative;
 }
 .navbar__item:hover {
   background-color: var(--gray700);
-  color: var(--white);
+  color: var(--gray50);
 }
-.navbar__item:hover svg {
-  stroke: var(--white);
+.item__add {
+  display: inherit;
+  margin-left: auto;
+  padding-right: 1rem;
+  fill: var(--gray500);
+  stroke: var(--gray500);
+}
+.item__add:hover svg {
   fill: var(--white);
+  stroke: var(--white);
 }
