--- a/src/components/atoms/Modal/style.css
+++ b/src/components/atoms/Modal/style.css
@@ -13,9 +13,10 @@
 .modal__heading {
   display: flex;
   justify-content: space-between;
-  padding-bottom: 1.7rem;
+  padding-bottom: 2rem;
 }
 .modal__heading h2 {
+  margin-top: 1.8rem;
   font-size: 2.6rem;
   color: var(--gray50);
 }
