--- a/src/components/layout/Aside/style.css
+++ b/src/components/layout/Aside/style.css
@@ -14,37 +14,47 @@
   font-weight: 700;
   color: var(--white);
 }
-.navbar__list {
+.nav__list {
   padding-top: 1rem;
   width: calc(var(--separation) * 4.2);
   display: flex;
   flex-direction: column;
   gap: .5rem;
 }
-.navbar__item {
+.nav__item {
   display: flex;
+  overflow-x: hidden;
   border-radius: .55rem;
   align-items: center;
   gap: 1.8rem;
   color: var(--gray80);
   font-size: 1.4rem;
-  padding-block: 1.2rem;
   font-weight: 700;
+  padding-block: 1.2rem;
   padding-left: 1.2rem;
   position: relative;
 }
-.navbar__item:hover {
+.nav__item:hover {
   background-color: var(--gray700);
   color: var(--gray50);
+}
+.nav__item:nth-child(3) {
+  cursor: pointer;
+  margin-top: 1rem;
+}
+.nav__section {
+  color: var(--gray400);
+  font-size: 1.2rem;
+  padding-block: .75rem;
+  padding-left: 1.2rem;
+  font-weight: 700;
 }
 .item__add {
   display: inherit;
   margin-left: auto;
   padding-right: 1rem;
   fill: var(--gray500);
-  stroke: var(--gray500);
 }
-.item__add:hover svg {
+.nav__item:hover .item__add {
   fill: var(--white);
-  stroke: var(--white);
 }
