--- a/src/components/layout/Aside/PlaylistForm/style.css
+++ b/src/components/layout/Aside/PlaylistForm/style.css
@@ -4,37 +4,10 @@
   gap: 2rem;
   font-size: 1.45rem;
 }
-.form__content div:nth-child(1) {
-  position: relative;
-  width: 100%;
-}
-.form__content div:nth-child(2) {
+.form__content div {
   width: 100%;
 }
 .form__description {
   height: 100%;
   min-height: 10rem;
-}
-.form__button {
-  margin-left: auto;
-  padding: 1rem 2.2rem;
-  color: var(--white);
-  font-weight: 500;
-  margin-top: 1rem;
-  font-size: 1.4rem;
-  border-radius: .4rem;
-  background-color: var(--primary);
-  cursor: pointer;
-}
-.form__button:hover {
-  background-color: #A379E7;
-}
-.form__error {
-  margin: 0;
-  top: -2.3rem;
-  right: 0;
-  position: absolute;
-  text-align: right;
-  font-size: 1.3rem;
-  color: #F56565;
 }
