--- a/src/components/layout/Aside/style.css
+++ b/src/components/layout/Aside/style.css
@@ -49,6 +49,10 @@
   fill: var(--white);
   stroke: var(--white);
 }
+.icon svg{
+  fill: var(--gray500);
+  stroke: none;
+}
 .nav__section {
   color: var(--gray400);
   font-size: 1.2rem;
@@ -59,11 +63,11 @@
 .icons {
   display: inherit;
   margin-left: auto;
-  margin-right: .5rem;
+  margin-right: .75rem;
   opacity: 0;
   fill: var(--gray500);
 }
-.icon:hover {
+.icon:hover svg {
   fill: var(--white);
 }
 .item__icon--add {
