--- a/src/pages/Playlist/layout/style.css
+++ b/src/pages/Playlist/layout/style.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   gap: .75rem;
+  cursor: pointer;
   margin-right: auto;
   font-size: 1.5rem;
   color: var(--gray50);
